all the links working. need changes in css.

--- a/platforms/android/assets/www/css/index.css
+++ b/platforms/android/assets/www/css/index.css
@@ -88,7 +88,7 @@ body{
     background-color: white;
 }
 
-#header{
+#header, #header1, #header2, #header3,#header4, #header5{
     background-color:#f63440;
     overflow: visible;
     text-align: left;
@@ -107,6 +107,7 @@ h1{
 .time1, .time1-o{
     display: inline-block;
     margin-top: 10px;
+    position:relative;
 }
 
 
@@ -125,12 +126,14 @@ h1{
 
 .one{
     display: none;
-    width:40%;
+    width:30%;
     float:right;
+
+
 }
 
 .ui-grid-x{
-    width: 50%;
+    width: 40%;
     margin: 0 auto;
 
 }
@@ -141,4 +144,7 @@ h1{
 
 }
 
+#aboutUsPage{
+    text-align: left;
+}
 
