--- a/www/css/index.css
+++ b/www/css/index.css
@@ -88,7 +88,7 @@ body{
     background-color: white;
 }
 
-#header{
+#header, #header1, #header2, #header3,#header4{
     background-color:#f63440;
     overflow: visible;
     text-align: left;
@@ -104,7 +104,7 @@ h1{
 }
 
 
-.time1, .time1-o{
+#time1, #time1-o{
     display: inline-block;
     margin-top: 10px;
     position:relative;
@@ -114,8 +114,8 @@ h1{
 
 
 
-.search{
-    width: 30%;
+.search,.tp{
+    width: 20%;
     margin: 10px auto;
 
 
@@ -133,7 +133,7 @@ h1{
 }
 
 .ui-grid-x{
-    width: 40%;
+    width: 30%;
     margin: 0 auto;
 
 }
@@ -144,4 +144,27 @@ h1{
 
 }
 
+#aboutUsPage, #searchPage{
+    text-align: left;
+}
+
+#searchForm{
+    padding-left:20px;
+}
+h3{
+    color: #143366;
+}
+
+.blur-filter {
+    -webkit-filter: blur(2px);
+    -moz-filter: blur(2px);
+    -o-filter: blur(2px);
+    -ms-filter: blur(2px);
+    filter: blur(2px);
+}
+
+
+/*.ui-block-a, .ui-block-b{*/
+    /*padding:10px;*/
+/*}*/
 
