--- a/www/css/index.css
+++ b/www/css/index.css
@@ -115,7 +115,7 @@ h1{
 
 
 .search,.tp{
-    width: 20%;
+    /*width: 20%;*/
     margin: 10px auto;
 
 
@@ -133,7 +133,7 @@ h1{
 }
 
 .ui-grid-x{
-    width: 30%;
+    /*width: 30%;*/
     margin: 0 auto;
 
 }
