--- a/www/css/index.css
+++ b/www/css/index.css
@@ -144,8 +144,12 @@ h1{
 
 }
 
-#aboutUsPage, #searchPage{
+#aboutUsPage, #searchPage {
     text-align: left;
+}
+#p1{
+    padding-left: 20px;
+    position: relative;
 }
 
 #searchForm{
