--- a/www/css/index.css
+++ b/www/css/index.css
@@ -147,6 +147,9 @@ h1{
 #aboutUsPage, #searchPage {
     text-align: left;
 }
+.ui-grid-z{
+    margin: 0;
+}
 #p1{
     padding-left: 20px;
     position: relative;
@@ -159,13 +162,13 @@ h3{
     color: #143366;
 }
 
-.blur-filter {
-    -webkit-filter: blur(2px);
-    -moz-filter: blur(2px);
-    -o-filter: blur(2px);
-    -ms-filter: blur(2px);
-    filter: blur(2px);
-}
+/*.blur-filter {*/
+    /*-webkit-filter: blur(2px);*/
+    /*-moz-filter: blur(2px);*/
+    /*-o-filter: blur(2px);*/
+    /*-ms-filter: blur(2px);*/
+    /*filter: blur(2px);*/
+/*}*/
 
 .nav-menu {
   position: absolute;
