--- a/www/css/index.css
+++ b/www/css/index.css
@@ -5,9 +5,9 @@
 
 body {
     -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
-    /*-webkit-text-size-adjust: none;             !* prevent webkit from resizing text to fit *!*/
+    -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
     -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
-    background-color: white;
+    background-color: #f2f2f2;
     background-attachment:fixed;
     font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
     font-size:8px;
@@ -85,17 +85,20 @@ body{
 
 }
 #homePage, #aboutUsPage, #loginPage , #signUpPage, #myPage, #searchPage, #searchResultPage{
-    background-color: white;
+    background-color: #ffffff;
 }
 
 #header, #header1, #header2, #header3,#header4{
     background-color:#f63440;
     overflow: visible;
-    text-align: left;
+    /*text-align: left;*/
     font-family: 'Calibri Light', Helvetica, Arial, sans-serif;
     font-size: 22px;
 
 
+}
+.ui.header{
+    text-align: left;
 }
 
 h1{
@@ -118,7 +121,6 @@ h1{
     /*width: 20%;*/
     margin: 10px auto;
 
-
 }
 
 
@@ -126,15 +128,24 @@ h1{
 
 .one{
     display: none;
-    width:30%;
-    float:right;
+    width:40%;
+    /*float:right;*/
 
 
 }
 
 .ui-grid-x{
-    /*width: 30%;*/
+    /*width: 100%;*/
+
     margin: 0 auto;
+    position: relative;
+
+}
+
+
+.ui-block-a, .ui-block-b{
+    width:50%;
+    padding-right: 30px;
 
 }
 
@@ -144,17 +155,18 @@ h1{
 
 }
 
-#aboutUsPage, #searchPage {
+#searchPage {
     text-align: left;
 }
-#aboutUsPage>.ui-grid-z{
-    padding:20px;
-    position:absolute;
-}
+
+
 #p1{
     padding-left: 20px;
     position: relative;
+    text-align: left;
 }
+
+
 
 #searchForm{
     padding-left:20px;
@@ -163,13 +175,7 @@ h3{
     color: #143366;
 }
 
-/*.blur-filter {*/
-    /*-webkit-filter: blur(2px);*/
-    /*-moz-filter: blur(2px);*/
-    /*-o-filter: blur(2px);*/
-    /*-ms-filter: blur(2px);*/
-    /*filter: blur(2px);*/
-/*}*/
+
 
 .nav-menu {
   position: absolute;
@@ -177,7 +183,19 @@ h3{
   right: 0px;
 }
 
-/*.ui-block-a, .ui-block-b{*/
-    /*padding:10px;*/
+/*.nav-menu li{*/
+    /*padding-right: 10px;*/
 /*}*/
 
+#loginPage-popup{
+
+    z-index: 100;
+}
+
+#signUpPage{
+    padding: 20px;
+}
+
+/*.ui-icon-bars:after {*/
+    /*background-image: url("data:image/svg+xml;charset=US-ASCII,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22iso-8859-1%22%3F%3E%3C!DOCTYPE%20svg%20PUBLIC%20%22-%2F%2FW3C%2F%2FDTD%20SVG%201.1%2F%2FEN%22%20%22http%3A%2F%2Fwww.w3.org%2FGraphics%2FSVG%2F1.1%2FDTD%2Fsvg11.dtd%22%3E%3Csvg%20version%3D%221.1%22%20id%3D%22Layer_1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%20x%3D%220px%22%20y%3D%220px%22%20%20width%3D%2214px%22%20height%3D%2214px%22%20viewBox%3D%220%200%2014%2014%22%20style%3D%22enable-background%3Anew%200%200%2014%2014%3B%22%20xml%3Aspace%3D%22preserve%22%3E%3Cpath%20style%3D%22fill%3A%23FFFFFF%3B%22%20d%3D%22M1%2C4h12c0.553%2C0%2C1-0.447%2C1-1s-0.447-1-1-1H1C0.447%2C2%2C0%2C2.447%2C0%2C3S0.447%2C4%2C1%2C4z%20M13%2C6H1%20C0.447%2C6%2C0%2C6.447%2C0%2C7c0%2C0.553%2C0.447%2C1%2C1%2C1h12c0.553%2C0%2C1-0.447%2C1-1C14%2C6.447%2C13.553%2C6%2C13%2C6z%20M13%2C10H1c-0.553%2C0-1%2C0.447-1%2C1%20s0.447%2C1%2C1%2C1h12c0.553%2C0%2C1-0.447%2C1-1S13.553%2C10%2C13%2C10z%22%2F%3E%3C%2Fsvg%3E");*/
+/*}*/
