--- a/www/css/index.css
+++ b/www/css/index.css
@@ -141,7 +141,7 @@ padding-right: 10px;
 
     margin: 0 auto;
     position: relative;
-    padding:5px;
+    padding:10px;
 
 }
 
@@ -192,6 +192,13 @@ h3{
   z-index: 100;
   right: 0px;
 }
+
+#signUp>button{
+    width: 80px;
+    padding: 10px;
+}
+
+
 
 /*.nav-menu li{*/
     /*padding-right: 10px;*/
