navigation fixed, advanced search page result ui fixed

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -171,6 +171,8 @@ padding-right: 10px;
 
 
 #p1{
+    word-wrap: normal;
+    width:250px;
     padding-left: 20px;
     position: relative;
     text-align: left;
